# pocker-rank

./: .python-version  README.md  pyproject.toml  requirements.txt  udf.sql  views.py  ♦️rank.py
.streamlit/: secrets.toml.template
pages/: 1_♥️register.py  2_♠️overall_record.py  3_♣️head-to-head.py
